# ez_pipe

./: README.md  pyproject.toml  requirements.txt  test.ipynb  test_file.txt
src/ez_pipe/: main.py
